--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "19.1.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "thirdweb": "^5.105.26",
     "viem": "^2.33.1",
     "zod": "^4.0.10",
     "zustand": "^5.0.6"
